--- a/presentation/index.html
+++ b/presentation/index.html
@@ -41,7 +41,10 @@
 					<h1>Behavioral driven development and the future</h1>
 					<h3>The evolution of Automated Testing</h3>
 					<p>
-						<small>Created by <a href="http://twolfson.com/">Todd Wolfson</a> / <a href="http://twitter.com/twolfsn">@twolfsn</a></small>
+						<small>Created by <a href="http://twolfson.com/">Todd Wolfson</a> / <a href="http://twitter.com/twolfsn">@twolfsn</a> / <a href="http://github.com/twolfson">github/twolfson</a></small>
+					</p>
+					<p>
+						<small><a href="https://github.com/twolfson">TODO: Fill in presentation URL here</a></small>
 					</p>
 				</section>
 
