Adjusting namespace for futureproofing

--- a/index.html
+++ b/index.html
@@ -1,2 +1,2 @@
-<script>window.location = 'presentation/index.html';</script>
-<div>Redirecting you to <a href="presentation/index.html">presentation/index.html</a></div>
+<script>window.location = 'utahjs/index.html';</script>
+<div>Redirecting you to <a href="utahjs/index.html">utahjs/index.html</a></div>
