--- a/utahjs/index.html
+++ b/utahjs/index.html
@@ -6,7 +6,7 @@
 
     <title>Behavioral driven development and the future</title>
 
-    <meta name="description" content="A chronological telling of how automated testing has evolved over time.">
+    <meta name="description" content="A chronological tale of how automated testing has evolved over time.">
     <meta name="author" content="Todd Wolfson">
 
     <meta name="apple-mobile-web-app-capable" content="yes" />
