--- a/utahjs/index.html
+++ b/utahjs/index.html
@@ -49,51 +49,11 @@
         </section>
 
         <section>
-          <h2>BDD Example</h2>
-          <p>
-            <pre><code>
-  // Library
-  function Calculator() {
-    this.sum = 0;
-  }
-  Calculator.prototype = {
-    add: function (num) {
-      this.sum += num;
-      return this;
-    },
-    total: function () {
-      return this.sum;
-    }
-  };
-            </pre><code>
-          </p>
-          <p>
-            <pre><code>
-  // Tests
-  describe('A calculator', function () {
-    beforeEach(function () {
-      this.calc = new Calculator();
-    });
-
-    describe('adding 2 and 3', function () {
-      before(function () {
-        this.calc.add(2).add(3);
-      });
-
-      it('returns 5 as the total', function () {
-        assert.strictEqual(this.calc.total(), 5);
-      });
-    });
-
-    it('begins with a total of 0', function () {
-      assert.strictEqual(this.calc.total(), 0);
-    });
-  });
-            </code></pre>
-          </p>
+          <h2>Live coding</h2>
+          <h3>BDD Example</h2>
 
           <aside class="notes">
-            TODO: If we have enough time, live code this.
+            Backup can be found <a href="code/backups/intro">here</a>.
           </aside>
         </section>
 
