Filling out terminology section. Not sure if right approach

--- a/utahjs/index.html
+++ b/utahjs/index.html
@@ -83,6 +83,25 @@
 
         <section>
           <section>
+            <h2>Defining terminology</h2>
+          </section>
+          <section>
+            <h2>TDD</h2>
+            <h3>Test Driven Development</h3>
+            <ul>
+              <li>Methodology for automated verification of expected functionality.</li>
+              <li>Manual testing is <strong>not</strong> automated and therefore is excluded.</li>
+              <li>We will be covering the format in which these tests are written.</li>
+            </ul>
+          </section>
+          <aside class="notes">
+            TODO: Revisit this section. I think we are putting too much on the screen.
+          </aside>
+        </section>
+
+        <section>
+          TODO: All of the following slides are for reference below
+          <section>
             <h2>Vertical Slides</h2>
             <p>
               Slides can be nested inside of other slides,
