More terminology -- going to rework all of this

--- a/utahjs/index.html
+++ b/utahjs/index.html
@@ -84,6 +84,9 @@
         <section>
           <section>
             <h2>Defining terminology</h2>
+          <aside class="notes">
+            TODO: I am not sure this section is the best way to approach separating confusion. It is good since it is dissonance but not sure it is the best.
+          </aside>
           </section>
           <section>
             <h2>TDD</h2>
@@ -92,6 +95,24 @@
               <li>Methodology for automated verification of expected functionality.</li>
               <li>Manual testing is <strong>not</strong> automated and therefore is excluded.</li>
               <li>We will be covering the format in which these tests are written.</li>
+            </ul>
+          </section>
+          <aside class="notes">
+            TODO: Revisit this section. I think we are putting too much on the screen.
+          </aside>
+          <section>
+            <h2>BDD</h2>
+            <h3>Behavior Driven Development</h3>
+            <ul>
+              <li>Methodology for automated verification that a human-readible specification is met.</li>
+              <li>This is exclusively about a format of tests.</li>
+              <li>
+                <p>This does not include implementation details.</p>
+                <ul>
+                  <li>Excludes Selenium, casperjs, capybara.</li>
+                  <li>These frameworks perform double-duty by serving as both the testing framework and the implementation</li>
+                </ul>
+              </li>
             </ul>
           </section>
           <aside class="notes">
