Added a bit of notes to terminology

--- a/utahjs/index.html
+++ b/utahjs/index.html
@@ -84,9 +84,9 @@
         <section>
           <section>
             <h2>Defining terminology</h2>
-          <aside class="notes">
-            TODO: I am not sure this section is the best way to approach separating confusion. It is good since it is dissonance but not sure it is the best.
-          </aside>
+            <aside class="notes">
+              TODO: I am not sure this section is the best way to approach separating confusion. It is good since it is dissonance but not sure it is the best.
+            </aside>
           </section>
           <section>
             <h2>TDD</h2>
@@ -96,10 +96,10 @@
               <li>Manual testing is <strong>not</strong> automated and therefore is excluded.</li>
               <li>We will be covering the format in which these tests are written.</li>
             </ul>
+            <aside class="notes">
+              TODO: Revisit this section. I think we are putting too much on the screen.
+            </aside>
           </section>
-          <aside class="notes">
-            TODO: Revisit this section. I think we are putting too much on the screen.
-          </aside>
           <section>
             <h2>BDD</h2>
             <h3>Behavior Driven Development</h3>
@@ -114,10 +114,10 @@
                 </ul>
               </li>
             </ul>
+            <aside class="notes">
+              TODO: Verify that capybara actually does blur the line
+            </aside>
           </section>
-          <aside class="notes">
-            TODO: Revisit this section. I think we are putting too much on the screen.
-          </aside>
         </section>
 
         <section>
