Finished up test-first vs test-later slide

--- a/utahjs/index.html
+++ b/utahjs/index.html
@@ -83,45 +83,57 @@
 
         <section>
           <section>
-            <h2>Defining terminology</h2>
-            <aside class="notes">
-              TODO: I am not sure this section is the best way to approach separating confusion. It is good since it is dissonance but not sure it is the best.
-            </aside>
+            <h2>Absolving confusion</h2>
+            <h3>Review and correct misconceptions</h3>
           </section>
           <section>
-            <h2>TDD</h2>
-            <h3>Test Driven Development</h3>
+            <h2>TDD/BDD</h2>
             <ul>
-              <li>Methodology for automated verification of expected functionality.</li>
+              <li>Methodologies for automated verification of expected functionality.</li>
               <li>Manual testing is <strong>not</strong> automated and therefore is excluded.</li>
-              <li>We will be covering the format in which these tests are written.</li>
+              <li>The differences between these two is the format of the tests (e.g. JSON, YAML, XML).</li>
             </ul>
-            <aside class="notes">
-              TODO: Revisit this section. I think we are putting too much on the screen.
-            </aside>
           </section>
           <section>
-            <h2>BDD</h2>
-            <h3>Behavior Driven Development</h3>
+            <h2>Test-first vs test-later approach</h2>
+            <h3>It's all about the situation</h3>
             <ul>
-              <li>Methodology for automated verification that a human-readible specification is met.</li>
-              <li>This is exclusively about a format of tests.</li>
+              <li>There is no requirement from TDD/BDD that you must write tests first.</lI>
               <li>
-                <p>This does not include implementation details.</p>
-                <ul>
-                  <li>Excludes Selenium, casperjs, capybara.</li>
-                  <li>These frameworks perform double-duty by serving as both the testing framework and the implementation</li>
-                </ul>
+                <p>In some situations, test-first is appropriate.</p>
+                <ul><li>e.g. You have solidified the API</li></ul>
               </li>
+              <li>
+                <p>In other situations, test-later is appropriate.</p>
+                <ul><li>e.g. You have the idea but not the specifics</li></ul>
+              </li>
+              <li>If you have not tried out the variants, it is a great learning experience.</li>
+              <li>You might also find that writing your tests as a specification is what you need to smooth edges.</li>
             </ul>
-            <aside class="notes">
-              TODO: Verify that capybara actually does blur the line
-            </aside>
+            <aside class="notes">TODO: This section is kind of bulky</aside>
+          </section>
+          <section>
+            <h2>100% code coverage is not required</h2>
+            <h3>Scenario strikes again</h3>
+            <ul>
+              <li>There is no requirement from TDD/BDD that you must write tests first.</lI>
+              <li>
+                <p>In some situations, test-first is appropriate.</p>
+                <ul><li>e.g. You have solidified the API</li></ul>
+              </li>
+              <li>
+                <p>In other situations, test-later is appropriate.</p>
+                <ul><li>e.g. You have the idea but not the specifics</li></ul>
+              </li>
+              <li>If you have not tried out the variants, it is a great learning experience.</li>
+              <li>You might also find that writing your tests as a specification is what you need to smooth edges.</li>
+            </ul>
+            <aside class="notes">TODO: This section is kind of bulky</aside>
           </section>
         </section>
 
         <section>
-          TODO: All of the following slides are for reference below
+          <aside class="notes">TODO: All of the following slides are for reference below</aside>
           <section>
             <h2>Vertical Slides</h2>
             <p>
