More slides. Time to land.

--- a/utahjs/index.html
+++ b/utahjs/index.html
@@ -84,7 +84,7 @@
         <section>
           <section>
             <h2>Absolving confusion</h2>
-            <h3>Review and correct misconceptions</h3>
+            <h3>Time to unlearn misconceptions</h3>
           </section>
           <section>
             <h2>TDD/BDD</h2>
@@ -151,6 +151,35 @@
               </li>
             </ul>
           </section>
+          <section>
+            <h2>&lt;/rant&gt;</h2>
+          </section>
+        </section>
+
+        <section>
+          <section>
+            <h2>Before automation</h2>
+          </section>
+          <section>
+            <h2>Manual testing</h2>
+            <p><img alt="TODO: IBM logo"/></p>
+            <ul>
+              <li>Manually cross-check results</li>
+              <li>Have people poke at program until it breaks</li>
+            </ul>
+        </section>
+
+        <section>
+          <section>
+            <h2>Birth of TDD</h2>
+          </section>
+          <section>
+            <h2>SUnit</h2>
+            <p><img alt="TODO: Kent Beck photo"/></p>
+            <ul>
+              <li>Kent Beck working in Smalltalk</li>
+              <li>Have people poke at program until it breaks</li>
+            </ul>
         </section>
 
         <section>
