--- a/utahjs/index.html
+++ b/utahjs/index.html
@@ -44,7 +44,7 @@
             <small>Created by <a href="http://twolfson.com/">Todd Wolfson</a> / <a href="http://twitter.com/twolfsn">@twolfsn</a> / <a href="http://github.com/twolfson">github/twolfson</a></small>
           </p>
           <p>
-            <small><a href="https://github.com/twolfson">TODO: Fill in presentation URL here</a></small>
+            <small><a href="http://twolfson.github.io/behavioral-driven-development-and-the-future-presentation/utahjs/index.html">http://twolfson.github.io/behavioral-driven-development-and-the-future-presentation/utahjs/index.html</a></small>
           </p>
         </section>
 
