Added much shorter link

--- a/utahjs/index.html
+++ b/utahjs/index.html
@@ -44,8 +44,9 @@
             <small>Created by <a href="http://twolfson.com/">Todd Wolfson</a> / <a href="http://twitter.com/twolfsn">@twolfsn</a> / <a href="http://github.com/twolfson">github/twolfson</a></small>
           </p>
           <p>
-            <small><a href="http://twolfson.github.io/behavioral-driven-development-and-the-future-presentation/utahjs/index.html">http://twolfson.github.io/behavioral-driven-development-and-the-future-presentation/utahjs/index.html</a></small>
-          </p>
+            <small><a href="http://wolfsn.com/utahjs.html">http://wolfsn.com/utahjs.html</a></small>
+<!--             <small><a href="http://twolfson.github.io/behavioral-driven-development-and-the-future-presentation/utahjs/index.html">http://twolfson.github.io/behavioral-driven-development-and-the-future-presentation/utahjs/index.html</a></small>
+ -->          </p>
         </section>
 
         <section>
