Cleaned up remaining slides a bit. Back to writing

--- a/utahjs/index.html
+++ b/utahjs/index.html
@@ -149,17 +149,17 @@
               <li>
                 Once again, TDD/BDD are about a format of tests and using them to move faster.
               </li>
+              <br/>
               <li>
                 PhantomJS is a testing harness for manipulating a browser.
               </li>
+              <br/>
               <li>
                 CasperJS is a combination of testing framework (TDD) and harness.
               </li>
+              <br/>
               <li>
                 Selenium is a combination of testing framework (TDD), runner, and harness.
-              </li>
-              <li>
-                Technically, these CasperJS and Selenium are TDD.
               </li>
             </ul>
           </section>
@@ -174,11 +174,12 @@
           </section>
           <section>
             <h2>Manual testing</h2>
-            <p><img alt="TODO: IBM logo"/></p>
+            <p><img alt="IBM logo" src="img/IBM_logo.jpg"/></p>
             <ul>
               <li>Manually cross-check results</li>
               <li>Have people poke at program until it breaks</li>
             </ul>
+          </section>
         </section>
 
         <section>
