Deciding to add modern JUnit slide

--- a/utahjs/index.html
+++ b/utahjs/index.html
@@ -268,6 +268,37 @@
             </code></pre>
             <small>(Sorry about the scrolling)</small>
           </section>
+          <section>
+            <h2>Modern JUnit</h2>
+            <pre><code>
+  public class MyClassTest {
+
+    @BeforeClass
+    public static void testSetup() {
+    }
+
+    @AfterClass
+    public static void testCleanup() {
+      // Teardown for data used by the unit tests
+    }
+
+    @Test(expected = IllegalArgumentException.class)
+    public void testExceptionIsThrown() {
+      MyClass tester = new MyClass();
+      tester.multiply(1000, 5);
+    }
+
+    @Test
+    public void testMultiply() {
+      MyClass tester = new MyClass();
+      assertEquals("10 x 5 must be 50", 50, tester.multiply(10, 5));
+    }
+  }
+            </code></pre>
+            <aside class="notes">
+              For those of you reading at home, <a href="http://www.vogella.com/articles/JUnit/article.html">http://www.vogella.com/articles/JUnit/article.html</a>
+            </aside>
+          </section>
         </section>
 
         <section>
