--- a/utahjs/index.html
+++ b/utahjs/index.html
@@ -418,6 +418,47 @@
   end
             </code></pre>
           </section>
+          <section>
+            <h2>Cucumber (2008)</h2>
+            <p><img alt="Cucumber logo" src="img/cucumber-logo.png"/></p>
+            <ul>
+              <li>Released as a gem by Aslak Helles&oslash;y</li>
+              <li>First framework to separate specification from implementation.</li>
+              <li>Re-embraces Agile/XP story template</li>
+            </ul>
+          </section>
+          <section>
+            <h2>Cucumber (2008)</h2>
+            <pre><code>
+Feature: Addition
+  In order to avoid silly mistakes
+  As a math idiot
+  I want to be told the sum of two numbers
+
+  Scenario Outline: Add two numbers
+    Given I have entered &lt;input_1&gt; into the calculator
+    And I have entered &lt;input_2&gt; into the calculator
+    When I press &lt;button&gt;
+    Then the result should be &lt;output&gt; on the screen
+            </code></pre>
+            <pre><code>
+Before do
+  @calc = Calculator.new
+end
+
+Given /I have entered (\d+) into the calculator/ do |n|
+  @calc.push n.to_i
+end
+
+When /I press (\w+)/ do |op|
+  @result = @calc.send op
+end
+
+Then /the result should be (.*) on the screen/ do |result|
+  @result.should == result.to_f
+end
+            </code></pre>
+          </section>
         </section>
 
         <section>
