Adding review slide

--- a/utahjs/index.html
+++ b/utahjs/index.html
@@ -506,6 +506,36 @@ end
         </section>
 
         <section>
+          <h2>Review + Break</h2>
+          <p>There are 4 common formats for tests<p>
+          <ul>
+            <li>TDD - Functional 1:1 testing of features</li>
+            <li>
+              <p>BDD (Specification / Joint)</p>
+              <ul>
+                <li>Uses keywords Given, When, Then.</li>
+                <li>1:1 testing per features.</li>
+              </ul>
+            </li>
+            <li>
+              <p>BDD (Behavioral)</p>
+              <ul>
+                <li>Keywords used are describe and it.</li>
+                <li>Context nesting allows double-duty for methods.</li>
+              </ul>
+            </li>
+            <li>
+              <p>BDD (Specification / Separated)</p>
+              <ul>
+                <li>Creates 2 files (a story, an implementation).</li>
+                <li>Keywords are Given, When, Then.</li>
+                <li>Re-use of methods across tests.</li>
+              </ul>
+            </li>
+          </ul>
+        </section>
+
+        <section>
           <aside class="notes">TODO: All of the following slides are for reference below</aside>
           <section>
             <h2>Vertical Slides</h2>
