--- a/utahjs/index.html
+++ b/utahjs/index.html
@@ -268,39 +268,6 @@
             </code></pre>
             <small>(Sorry about the scrolling)</small>
           </section>
-          <section>
-            <h2>Modern JUnit (circa 2012)</h2>
-            <pre><code>
-  public class MyClassTest {
-
-    @BeforeClass
-    public static void testSetup() {
-    }
-
-    @AfterClass
-    public static void testCleanup() {
-      // Teardown for data used by the unit tests
-    }
-
-    @Test(expected = IllegalArgumentException.class)
-    public void testExceptionIsThrown() {
-      MyClass tester = new MyClass();
-      tester.multiply(1000, 5);
-    }
-
-    @Test
-    public void testMultiply() {
-      MyClass tester = new MyClass();
-      assertEquals("10 x 5 must be 50", 50, tester.multiply(10, 5));
-    }
-  }
-            </code></pre>
-            <aside class="notes">
-              For those of you reading at home, <a href="http://www.vogella.com/articles/JUnit/article.html">http://www.vogella.com/articles/JUnit/article.html</a>
-
-              TODO: Might want to relocate this to a summary section
-            </aside>
-          </section>
         </section>
 
         <section>
@@ -536,259 +503,112 @@ end
         </section>
 
         <section>
-          <aside class="notes">TODO: All of the following slides are for reference below</aside>
           <section>
-            <h2>Vertical Slides</h2>
-            <p>
-              Slides can be nested inside of other slides,
-              try pressing <a href="#" class="navigate-down">down</a>.
-            </p>
-            <a href="#" class="image navigate-down">
-            </a>
+            <h2>Modern time. Modern space.</h2>
+            <h3>var now = new Date();</h3>
           </section>
           <section>
-            <h2>Basement Level 1</h2>
-            <p>Press down or up to navigate.</p>
-          </section>
-          <section>
-            <h2>Basement Level 2</h2>
-            <p>Cornify</p>
-            <a class="test" href="http://cornify.com">
-            </a>
-          </section>
-          <section>
-            <h2>Basement Level 3</h2>
-            <p>That's it, time to go back up.</p>
-            <a href="#/2" class="image">
-            </a>
-          </section>
-        </section>
+            <h2>JUnit (circa 2012)</h2>
+            <pre><code>
+  public class MyClassTest {
 
-        <section>
-          <h2>Point of View</h2>
-          <p>
-            Press <strong>ESC</strong> to enter the slide overview. Hold down alt and click on any element to zoom in on it using <a href="http://lab.hakim.se/zoom-js">zoom.js</a>. Alt + click anywhere to zoom back out.
-          </p>
-        </section>
+    @BeforeClass
+    public static void testSetup() {
+    }
 
-        <section>
-          <h2>rvl.io</h2>
-          <p>
-            If you don't like writing slides in HTML you can use the online editor <a href="http://www.rvl.io" target="_blank">rvl.io</a>.
-          </p>
-        </section>
+    @AfterClass
+    public static void testCleanup() {
+      // Teardown for data used by the unit tests
+    }
 
-        <section>
-          <h2>Works in Mobile Safari</h2>
-          <p>
-            Try it out! You can swipe through the slides and pinch your way to the overview.
-          </p>
-        </section>
+    @Test(expected = IllegalArgumentException.class)
+    public void testExceptionIsThrown() {
+      MyClass tester = new MyClass();
+      tester.multiply(1000, 5);
+    }
 
-        <section>
-          <h2>Marvelous Unordered List</h2>
-          <ul>
-            <li>No order here</li>
-            <li>Or here</li>
-            <li>Or here</li>
-            <li>Or here</li>
-          </ul>
-        </section>
-
-        <section>
-          <h2>Fantastic Ordered List</h2>
-          <ol>
-            <li>One is smaller than...</li>
-            <li>Two is smaller than...</li>
-            <li>Three!</li>
-          </ol>
-        </section>
-
-        <section data-markdown>
-          <script type="text/template">
-            ## Markdown support
-
-            For those of you who like that sort of thing. Instructions and a bit more info available [here](https://github.com/hakimel/reveal.js#markdown).
-
-              <section data-markdown>
-                ## Markdown support
-
-                For those of you who like that sort of thing.
-                Instructions and a bit more info available [here](https://github.com/hakimel/reveal.js#markdown).
-              </section>
-          </script>
-        </section>
-
-        <section id="transitions">
-          <h2>Transition Styles</h2>
-          <p>
-            You can select from different transitions, like: <br>
-            <a href="?transition=cube#/transitions">Cube</a> -
-            <a href="?transition=page#/transitions">Page</a> -
-            <a href="?transition=concave#/transitions">Concave</a> -
-            <a href="?transition=zoom#/transitions">Zoom</a> -
-            <a href="?transition=linear#/transitions">Linear</a> -
-            <a href="?transition=fade#/transitions">Fade</a> -
-            <a href="?transition=none#/transitions">None</a> -
-            <a href="?#/transitions">Default</a>
-          </p>
-        </section>
-
-        <section id="themes">
-          <h2>Themes</h2>
-          <p>
-            Reveal.js comes with a few themes built in: <br>
-            <a href="?theme=sky#/themes">Sky</a> -
-            <a href="?theme=beige#/themes">Beige</a> -
-            <a href="?theme=simple#/themes">Simple</a> -
-            <a href="?theme=serif#/themes">Serif</a> -
-            <a href="?theme=night#/themes">Night</a> -
-            <a href="?#/themes">Default</a>
-          </p>
-          <p>
-            <small>
-              * Theme demos are loaded after the presentation which leads to flicker. In production you should load your theme in the <code>&lt;head&gt;</code> using a <code>&lt;link&gt;</code>.
-            </small>
-          </p>
-        </section>
-
-        <section>
-          <section data-state="alert">
-            <h2>Global State</h2>
-            <p>
-              Set <code>data-state="something"</code> on a slide and <code>"something"</code>
-              will be added as a class to the document element when the slide is open. This lets you
-              apply broader style changes, like switching the background.
-            </p>
-            <a href="#" class="image navigate-down">
-            </a>
-          </section>
-          <section data-state="blackout">
-            <h2>"blackout"</h2>
-            <a href="#" class="image navigate-down">
-            </a>
-          </section>
-          <section data-state="soothe">
-            <h2>"soothe"</h2>
-            <a href="#" class="image navigate-next">
-            </a>
-          </section>
-        </section>
-
-        <section data-state="customevent">
-          <h2>Custom Events</h2>
-          <p>
-            Additionally custom events can be triggered on a per slide basis by binding to the <code>data-state</code> name.
-          </p>
-          <pre><code contenteditable style="font-size: 18px; margin-top: 20px;">Reveal.addEventListener( 'customevent', function() {
-  console.log( '"customevent" has fired' );
-} );
-          </code></pre>
-        </section>
-
-        <section>
-          <h2>Clever Quotes</h2>
-          <p>
-            These guys come in two forms, inline: <q cite="http://searchservervirtualization.techtarget.com/definition/Our-Favorite-Technology-Quotations">
-            The nice thing about standards is that there are so many to choose from</q> and block:
-          </p>
-          <blockquote cite="http://searchservervirtualization.techtarget.com/definition/Our-Favorite-Technology-Quotations">
-            For years there has been a theory that millions of monkeys typing at random on millions of typewriters would
-            reproduce the entire works of Shakespeare. The Internet has proven this theory to be untrue.
-          </blockquote>
-        </section>
-
-        <section>
-          <h2>Pretty Code</h2>
-          <pre><code contenteditable>
-function linkify( selector ) {
-  if( supports3DTransforms ) {
-
-    var nodes = document.querySelectorAll( selector );
-
-    for( var i = 0, len = nodes.length; i &lt; len; i++ ) {
-      var node = nodes[i];
-
-      if( !node.className ) ) {
-        node.className += ' roll';
-      }
-    };
+    @Test
+    public void testMultiply() {
+      MyClass tester = new MyClass();
+      assertEquals("10 x 5 must be 50", 50, tester.multiply(10, 5));
+    }
   }
-}
-          </code></pre>
-          <p>Courtesy of <a href="http://softwaremaniacs.org/soft/highlight/en/description/">highlight.js</a>.</p>
-        </section>
-
-        <section>
-          <h2>Intergalactic Interconnections</h2>
-          <p>
-            You can link between slides internally,
-            <a href="#/2/3">like this</a>.
-          </p>
-        </section>
-
-        <section>
-          <section>
-            <h2>Fragmented Views</h2>
-            <p>Hit the next arrow...</p>
-            <p class="fragment">... to step through ...</p>
-            <ol>
-              <li class="fragment"><code>any type</code></li>
-              <li class="fragment"><em>of view</em></li>
-              <li class="fragment"><strong>fragments</strong></li>
-            </ol>
-
+            </code></pre>
             <aside class="notes">
-              This slide has fragments which are also stepped through in the notes window.
+              For those of you reading at home, <a href="http://www.vogella.com/articles/JUnit/article.html">http://www.vogella.com/articles/JUnit/article.html</a>
             </aside>
           </section>
           <section>
-            <h2>Fragment Styles</h2>
-            <p>There's a few styles of fragments, like:</p>
-            <p class="fragment grow">grow</p>
-            <p class="fragment shrink">shrink</p>
-            <p class="fragment roll-in">roll-in</p>
-            <p class="fragment fade-out">fade-out</p>
-            <p class="fragment highlight-red">highlight-red</p>
-            <p class="fragment highlight-green">highlight-green</p>
-            <p class="fragment highlight-blue">highlight-blue</p>
+            <h2>qunit</h2>
+            TODO
+          </section>
+          <section>
+            <h2>nodeunit</h2>
+            TODO
+          </section>
+          <section>
+            <h2>Expresso</h2>
+            TODO
+          </section>
+          <section>
+            <h2>tape</h2>
+            TODO
+          </section>
+          <section>
+            <h2>Jasmine</h2>
+            TODO
+          </section>
+          <section>
+            <h2>Cucumber.js</h2>
+            TODO
+          </section>
+          <section>
+            <h2>vows</h2>
+            TODO
+          </section>
+          <section>
+            <h2>mocha</h2>
+            TODO
+          </section>
+          <section>
+            <h2>intern</h2>
+            TODO
           </section>
         </section>
 
         <section>
-          <h2>Spectacular image!</h2>
-          <a class="image" href="http://lab.hakim.se/meny/" target="_blank">
-          </a>
+          <section>
+            <h2>Time to experiment</h2>
+            <aside class="notes">
+              I wrote this when I lacked knowledge of everything in this presentation except for vows, mocha, and seeing Gherkin but not understanding it. I wanted to hybridize them without constraints.
+            </aside>
+          </section>
+          <section>
+            <h2>doubleshot (2013)</h2>
+            <ul>
+              <li>Wanted slimmer tests and at-a-glance specifications.</li>
+              <li>Loved vows syntax.</li>
+              <li>Tried out a few things for cross-compiling vows into mocha but they failed (crossbones, sculptor).</li>
+              <li>Discovered cool features upon writing it.</li>
+            </ul>
+          </section>
+          <section>
+            <h2>doubleshot (2013)</h2>
+            <h3>Live code example</h3>
+            TODO: Code up live sample backup
+          </section>
         </section>
 
         <section>
-          <h2>Take a Moment</h2>
+          <h1>Behavioral driven development and the future</h1>
+          <h3>The evolution of Automated Testing</h3>
           <p>
-            Press b or period on your keyboard to enter the 'paused' mode. This mode is helpful when you want to take distracting slides off the screen
-            during a presentation.
+            <small>Created by <a href="http://twolfson.com/">Todd Wolfson</a> / <a href="http://twitter.com/twolfsn">@twolfsn</a> / <a href="http://github.com/twolfson">github/twolfson</a></small>
           </p>
-        </section>
-
-        <section>
-          <h2>Stellar Links</h2>
-          <ul>
-            <li><a href="https://github.com/hakimel/reveal.js">Source code on GitHub</a></li>
-            <li><a href="http://hakim.se/projects/reveal-js">Leave feedback on my site</a></li>
-            <li><a href="http://twitter.com/hakimel">Follow me on Twitter</a></li>
-          </ul>
-        </section>
-
-        <section>
-          <h2>It's free</h2>
           <p>
-            reveal.js and <a href="http://www.rvl.io">rvl.io</a> are entirely free but if you'd like to support the projects you can donate below.
-            Donations will go towards hosting and domain costs.
-          </p>
-        </section>
-
-        <section>
-          <h1>THE END</h1>
-          <h3>BY Hakim El Hattab / hakim.se</h3>
+            <small><a href="http://wolfsn.com/utahjs.html">http://wolfsn.com/utahjs.html</a></small>
+<!--             <small><a href="http://twolfson.github.io/behavioral-driven-development-and-the-future-presentation/utahjs/index.html">http://twolfson.github.io/behavioral-driven-development-and-the-future-presentation/utahjs/index.html</a></small>
+ -->          </p>
         </section>
 
       </div>
