--- a/utahjs/index.html
+++ b/utahjs/index.html
@@ -599,14 +599,90 @@ end
           </section>
           <section>
             <h2>Jasmine</h2>
+            <p>Good for synchronous. Horrible for asynchronous.</p>
             <pre><code>
-              TODO
+  describe("A suite is just a function", function() {
+    var a;
+
+    it("and so is a spec", function() {
+      a = true;
+
+      expect(a).toBe(true);
+    });
+  });
+            </code></pre>
+            <pre><code>
+  describe("Asynchronous specs", function() {
+    var value, flag;
+
+    it("should support async execution [...]", function() {
+
+      runs(function() {
+        flag = false;
+        value = 0;
+
+        setTimeout(function() {
+          flag = true;
+        }, 500);
+      });
+
+      waitsFor(function() {
+        value++;
+        return flag;
+      }, "The Value should be incremented", 750);
+
+      runs(function() {
+        expect(value).toBeGreaterThan(0);
+      });
+    });
+  });
             </code></pre>
           </section>
           <section>
             <h2>Cucumber.js</h2>
             <pre><code>
-              TODO
+  Feature: Example feature
+    As a user of cucumber.js
+    I want to have documentation on cucumber
+    So that I can concentrate on building awesome applications
+
+    Scenario: Reading documentation
+      Given I am on the Cucumber.js Github repository
+      When I go to the README file
+      Then I should see "Usage" as the page title
+            </code></pre>
+            <pre><code>
+  module.exports = function () {
+    this.World = require("../support/world.js").World; // overwrite default World constructor
+
+    this.Given(/^I am on the Cucumber.js Github repository$/, function(callback) {
+      // Express the regexp above with the code you wish you had.
+      // `this` is set to a new this.World instance.
+      // i.e. you may use this.browser to execute the step:
+
+      this.visit('http://github.com/cucumber/cucumber-js', callback);
+
+      // The callback is passed to visit() so that when the job's finished, the next step can
+      // be executed by Cucumber.
+    });
+
+    this.When(/^I go to the README file$/, function(callback) {
+      // Express the regexp above with the code you wish you had. Call callback() at the end
+      // of the step, or callback.pending() if the step is not yet implemented:
+
+      callback.pending();
+    });
+
+    this.Then(/^I should see "(.*)" as the page title$/, function(title, callback) {
+      // matching groups are passed as parameters to the step definition
+
+      if (!this.isOnPageWithTitle(title))
+        // You can make steps fail by calling the `fail()` function on the callback:
+        callback.fail(new Error("Expected to be on page with title " + title));
+      else
+        callback();
+    });
+  };
             </code></pre>
           </section>
           <section>
